Fixing cut off black background near the bottom the the front page

--- a/sites/all/themes/eshell/styles/scss/components/_resets.scss
+++ b/sites/all/themes/eshell/styles/scss/components/_resets.scss
@@ -25,6 +25,11 @@ body{
 #site{
   background: #fff;
 }
+.front{
+  #site{
+    background: $midnight;
+  }
+}
 
 // Force all images to be responsive
 img{
